--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <body>
+    <nav class="navbar navbar-light bg-light navbar-expand-sm">
+  <a href="" class="navbar-brand">Whiskey drop</a>
+<ul class="navbar-nav mr-auto">
+    <li class="active nav-item mr-2"><a class="nav-link" href="/">Home</a></li>
+    <li class="nav-item mr-2"><a class="nav-link" href="/">About</a></li>
+    <li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="">Sign in/signup</a></li>
+</ul>
+<div class="d-none d-md-block">
+<p class="navbar-text my-auto mr-2"><i>Great whiskey delivered to your door</i></p>
+     <a href="login">Sign in / Sign up</a>    
+     </div>
+</nav>
     <article class="container">
          <!-- Callout -->
          <div class="row">
@@ -86,4 +98,4 @@
     
 </body>
 </html>
- 
+  
