--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whiskey Drop | Taste a new whiskey every month</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-</head>\
+    <script src="https://kit.fontawesome.com/0c822ab8ba.js" crossorigin="anonymous"></script>
+</head>
 
 <body>
     <nav class="navbar navbar-light bg-light navbar-expand-sm">
@@ -21,6 +22,12 @@
      </div>
 </nav> 
     <article class="container mt-3">
+        <div class="row d-none d-sm-block">
+            <div class="col-12">
+       <div class="alert alert-warning"><strong>Sale Now On</strong> We've got a sale on. Get a 12-month subscription for the price of 6! <a href="">See here for details!</a>
+           </div>
+         </div>  
+       </div>
          <!-- Callout --> 
          <div class="row"> 
              <div class="col-12">
@@ -36,7 +43,7 @@
         </section> 
             </div>
          </div>
-        <!-- Callout -->
+        <!-- /Callout -->
         <hr>
         <!--Quotes-->
     
@@ -49,7 +56,9 @@
         <div class="row">
                 <div class="col-12 col-md-6 col-lg-4">
                 <div class="media">
+                    <div class="d-none d-sm-block">
                     <img src="images/girl-image.png" class="rounded-circle mr-3" height=100 width=100>
+                    </div>
                 <div class="media-body"> 
             <blockquote class="blockquote">
                 <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
@@ -62,9 +71,11 @@
             
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="media">
+                    <div class="d-none d-sm-block">
                     <img src="images/guy-image.png" class="rounded-circle mr-3" height=100 width=100>
+                    </div>
                 <div class="media-body">
-                <blockquote class="quote">
+                <blockquote class="blockquote">
                 <p>I haven't been sober for months!</p>
                 <p>- Jane Doe</p>
             </blockquote>
@@ -87,21 +98,21 @@
         <div class="row">
                  <div class="col-12 col-md-6 col-lg-4">
                    <div class="feature">
-                <h3>Feature 1</h3>
+                <h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1 <span class="badge badge-success">NEW!</span></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                <p><a class="btn btn-sm btn-light" herf="">Read More</a></p>
                    </div>
                 </div>
         <div class="col-12 col-md-6 col-lg-4">
             <div class="feature">
-                <h3>Feature 2</h3>
+                <h3><i class="fas fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <p><a class="btn btn-sm btn-light" herf="">Read More</a></p>
             </div>
         </div>  
            <div class="col-12 d-md-none d-lg-block col-lg-4">
             <div class="feature">
-                <h3>Feature 3</h3>
+                <h3><i class="fas fa-times-circle d-none d-sm-inline"></i> Feature 3</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
               <p><a class="btn btn-sm btn-light" herf="">Read More</a></p>
             </div>
