--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light bg-light navbar-expand-sm">
+    
+    <div class="container-fluid navalert-container">
+        <div class="container-fluid  alert-container"> 
+        <div class="row d-none d-sm-block">
+            <div class="col-12">
+       <div class="side-wide-alert alert alert-warning"><strong>Sale Now On</strong> We've got a sale on. Get a 12-month subscription for the price of 6! <a href="">See here for details!</a>
+           </div>
+         </div>  
+       </div>
+       </div>
+    <nav class="navbar navbar-dark navbar-expand-sm">
   <a href="/" class="navbar-brand">Whiskey Drop</a>
 
   <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="toggle navigation">
@@ -36,9 +46,10 @@
 </div>
 <div class="d-none d-md-block" >
 <p class="navbar-text my-auto mr-2"><i>Great whiskey delivered to your door</i></p>
-     <a href="/login">Sign in / Sign up</a>    
+     <a href="/login" class="btn btn--cta btn--red">Sign in / Sign up</a>    
      </div>
 </nav> 
+</div>
    <!--<div class="container alert-container"> 
         <div class="row d-none d-sm-block">
             <div class="col-12">
