--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="toggle navigation">
     <span class="navbar-toggler-icon"></span></button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown" >
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
 <ul class="navbar-nav mr-auto">
     <li class="active nav-item mr-2"><a class="nav-link" href="/">Home</a></li>
     <li class="nav-item mr-2"><a class="nav-link" href="/">About</a></li>
@@ -81,15 +81,17 @@
         <!-- /Callout -->
         
         <!--Quotes-->
-    <div class="container quotes-container">
+        <div class="container-wrapper">
+    <div class="container quotes-container content-container">
     <section class="quotes">
         <div class="row">
-            <div class="col-12 my-5">
+            <div class="col-12 page-header">
               <h2 class="text-uppercase">Quotes:</h2>
+              <hr class="blockdivider blockdivider--short"></hr>
             </div>
         </div>
         <div class="row">
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="col-12 col-md-6">
                 <div class="media">
                     <div class="d-none d-sm-block">
                     <img src="images/girl-image.png" class="rounded-circle mr-3" height="100": width="100">
@@ -122,13 +124,15 @@
                 
                  <!-- /.quotes -->
         </div>
-
+    </div>
         <!-- Features -->
-        <div class="feature-container">
+        <div class="container-wrapper container-wrapper--red">
+        <div class="container features-container content-container">
         <section class="features">
             <div class="row">
-                <div class="col-12 my-5">
+                <div class="col-12 page-header">
             <h2 class="text-uppercase">Features:</h2>
+            <hr class="blockdivider blockdivider--short blockdivider--white"></hr> 
                 </div>
             </div>
         <div class="row">
@@ -155,6 +159,7 @@
             </div>
         </div>
     </section>
+    </div>
     </div>
         <!-- /.features -->
 
