--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
              <div class="col-12">
         <section class="callout jumbotron text-center">
  <h1 class="jumbotron-header">The finest whiskeys delivered to your doorstep.</h1>
- <hr class="block-divider block-divider-orange">
+ <hr class="block-divider block-divider--orange">
     <p class="lead">Sign up today to start receiving the world's best whiskey<s class="d-none d-sm-inline"> $19.99</s>
         <span class="d-inline d-sm-none"><br></span>
         <strong><mark>First drink is free!</mark></strong></p>
@@ -87,7 +87,7 @@
         <div class="row">
             <div class="col-12 page-header">
               <h2 class="text-uppercase">Quotes:</h2>
-              <hr class="blockdivider blockdivider--short"></hr>
+              <hr class="block-divider block-divider-short"></hr>
             </div>
         </div>
         <div class="row">
@@ -132,27 +132,27 @@
             <div class="row">
                 <div class="col-12 page-header">
             <h2 class="text-uppercase">Features:</h2>
-            <hr class="blockdivider blockdivider--short blockdivider--white"></hr> 
+            <hr class="block-divider blockdivider-short block-divider--white"></hr> 
                 </div>
             </div>
         <div class="row">
                  <div class="col-12 col-md-6 col-lg-4">
                    <div class="feature">
-                <h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1 <span class="badge badge-success">NEW!</span></h3>
+                <h3><i class="fas fa-gift d-none d-sm-block"></i> Feature 1 <span class="badge badge-success">NEW!</span></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                <p><a class="btn btn-sm btn-light" herf="">Read More</a></p>
                    </div>
                 </div>
         <div class="col-12 col-md-6 col-lg-4">
             <div class="feature">
-                <h3><i class="fas fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
+                <h3><i class="fas fa-credit-card d-none d-sm-block"></i> Feature 2</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <p><a class="btn btn-sm btn-light" herf="">Read More</a></p>
             </div>
-        </div>  
+        </div> 
            <div class="col-12 d-md-none d-lg-block col-lg-4">
             <div class="feature">
-                <h3><i class="fas fa-times-circle d-none d-sm-inline"></i> Feature 3</h3>
+                <h3><i class="fas fa-times-circle d-none d-sm-block"></i> Feature 3</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
               <p><a class="btn btn-sm btn-light" herf="">Read More</a></p>
             </div>
